--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,22 +1,42 @@
+@use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
+
 .modal {
   &__backdrop {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.8);
     top: 0;
     right: 0;
     left: 0;
     bottom: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: inherit;
     z-index: 10;
   }
 
-  &__content {
-    color: white;
+  &__container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    color: white;
     align-items: center;
     width: 65%;
-    height: 90%;
-    margin: auto;
+    height: 80%;
+  }
+
+  &__heading {
+    text-align: center;
+    text-transform: capitalize;
+    font-size: 3.5rem;
+    margin: 1.6rem;
+  }
+
+  &__content {
+    padding: 16px;
+    overflow: auto;
+  }
+
+  &__button {
   }
 }
