--- a/src/components/Game/Game.scss
+++ b/src/components/Game/Game.scss
@@ -1,3 +1,6 @@
+@use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
+
 .game {
   flex: 4;
   display: flex;
@@ -8,13 +11,41 @@
 
   &__heading {
     text-align: center;
+    margin: 0.8rem auto;
+    font-weight: bold;
   }
 
   &__console {
     text-align: center;
+    max-width: 800px;
+    margin: auto;
+  }
+
+  &__log {
+    font-weight: bold;
   }
 
   &__hand {
     text-align: center;
+  }
+
+  &__button {
+    @include button;
+    padding: 0.5rem 4rem;
+    margin: 1.6rem;
+  }
+
+  &__game-over {
+    &-heading {
+      margin-bottom: 0.4rem;
+    }
+
+    &-text {
+      margin-bottom: 0.4rem;
+    }
+  }
+
+  &__outcome {
+    margin-bottom: 3.2rem;
   }
 }
