--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1,3 +1,20 @@
+@use "./variables" as *;
+
+@mixin button {
+  font-size: 1.6rem;
+  text-transform: capitalize;
+  color: white;
+  background-color: rgb(116, 34, 34);
+  box-shadow: $box-shadow-global;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: rgb(132, 34, 34);
+  }
+}
+
 @mixin scrollbars {
   /* width */
   ::-webkit-scrollbar {
