--- a/src/components/Session/Session.scss
+++ b/src/components/Session/Session.scss
@@ -2,4 +2,11 @@
   display: flex;
   width: inherit;
   height: inherit;
+  animation: session-fade-in 0.5s linear;
+}
+
+@keyframes session-fade-in {
+  0% {
+    opacity: 0;
+  }
 }
