start game implemented, rest of logic in development

--- a/src/components/MultiplayerMenu/MultiplayerMenu.scss
+++ b/src/components/MultiplayerMenu/MultiplayerMenu.scss
@@ -1,6 +1,6 @@
-@use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
 
-.main-menu {
+.multiplayer-menu {
   @include menu;
+  animation: none;
 }
