--- a/src/components/JoinGame/JoinGame.scss
+++ b/src/components/JoinGame/JoinGame.scss
@@ -10,18 +10,22 @@
 
   &__text {
     font-size: 2rem;
+
+    &--error {
+      color: orange;
+    }
   }
 
   &__input {
-    &::-webkit-outer-spin-button,
-    &::-webkit-inner-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
-    }
+    // &::-webkit-outer-spin-button,
+    // &::-webkit-inner-spin-button {
+    //   -webkit-appearance: none;
+    //   margin: 0;
+    // }
 
-    &[type="number"] {
-      -moz-appearance: textfield;
-    }
+    // &[type="number"] {
+    //   -moz-appearance: textfield;
+    // }
 
     font-size: 2rem;
     text-align: center;
