--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -19,7 +19,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: white;
   background-color: rgb(0, 0, 80);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-width: fit-content;
+  min-height: 70vh;
 }
 
 .card {
