--- a/src/app.scss
+++ b/src/app.scss
@@ -1,20 +1,21 @@
-@use "./styles/partials/variables" as *;
+@use "./styles/variables" as *;
 
 .app {
   display: flex;
   flex-direction: column;
   align-items: center;
   min-width: fit-content;
-  padding: 20px;
-
-  &__title {
-    font-size: 5rem;
-    margin-bottom: 2rem;
-    text-shadow: $text-shadow-global;
-  }
+  height: 90%;
 
   &__link {
     color: inherit;
     text-decoration: none;
+    margin-bottom: 32px;
+    z-index: 20;
+  }
+
+  &__title {
+    font-size: 5rem;
+    text-shadow: $text-shadow-global;
   }
 }
