--- a/src/components/game-screen/game-screen.scss
+++ b/src/components/game-screen/game-screen.scss
@@ -1,17 +1,12 @@
-@use "../../styles/partials/variables" as *;
+@use "../../styles/variables" as *;
 
 .game-screen {
-  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(
-    to bottom right,
-    rgb(0, 120, 0),
-    rgb(0, 50, 0)
-  );
-  box-shadow: $box-shadow-global;
-  border-radius: 8px;
-  width: 1200px;
-  height: 500px;
+  justify-self: center;
+  width: 100%;
+  min-width: 1200px;
+  height: 540px;
+  max-height: 600px;
 }
