--- a/src/components/quit-game-modal/quit-game-modal.scss
+++ b/src/components/quit-game-modal/quit-game-modal.scss
@@ -1,5 +1,5 @@
-@use "../../styles/partials/variables" as *;
-@use "../../styles/partials/mixins" as *;
+@use "../../styles/variables" as *;
+@use "../../styles/mixins" as *;
 
 .quit-game-modal {
   text-align: center;
