--- a/src/components/instructions/instructions.scss
+++ b/src/components/instructions/instructions.scss
@@ -10,6 +10,7 @@
 
   &__item {
     margin: 1.6rem;
+    margin-left: 2.4rem;
     @for $i from 1 through 9 {
       @if $i == 1 or $i == 5 or $i == 9 {
         &:nth-child(#{$i}) {
