--- a/src/components/join-game/join-game.scss
+++ b/src/components/join-game/join-game.scss
@@ -9,10 +9,10 @@
   }
 
   &__text {
-    font-size: 2rem;
+    font-size: 2.4rem;
 
     &--info {
-      color: orange;
+      @include menu-notification;
     }
   }
 
