--- a/src/components/multiplayer-menu/multiplayer-menu.scss
+++ b/src/components/multiplayer-menu/multiplayer-menu.scss
@@ -7,9 +7,6 @@
   }
 
   &__text {
-    font-size: 2rem;
-    margin: 1rem;
-    color: orange;
-    max-width: 80%;
+    @include menu-notification;
   }
 }
