--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -64,6 +64,13 @@
   }
 }
 
+@mixin menu-notification {
+  font-size: 2.4rem;
+  margin: 1rem;
+  margin-top: 24px;
+  color: orange;
+}
+
 @keyframes menu-fade-in {
   0% {
     opacity: 0;
