--- a/src/components/join-game/join-game.scss
+++ b/src/components/join-game/join-game.scss
@@ -20,23 +20,17 @@
     font-size: 2rem;
     text-align: center;
     outline: none;
-    margin: 2rem;
-    padding: 0.5rem;
+    margin: 3.2rem;
+    padding: 0.8rem;
     border: none;
     border-radius: 4px;
   }
 
   &__actions {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 2rem;
+    @include actions;
   }
 
   &__button {
     @include menu-button;
-    & {
-      width: 200px;
-    }
   }
 }
